[gd_scene load_steps=18 format=3 uid="uid://wkoi73jy7ikv"]

[ext_resource type="Texture2D" uid="uid://bx0rbi6fac3gw" path="res://props/EnemySprites/ice_cream_enemy.png" id="1_jamjk"]
[ext_resource type="Script" path="res://scenes/enemies/ice_cream_enemy/ice_cream_enemy.gd" id="1_olwro"]
[ext_resource type="Shader" path="res://scenes/enemies/ice_cream_enemy/ice_cream_enemy.gdshader" id="2_3xoyq"]
[ext_resource type="PackedScene" uid="uid://bv06xwp4ohnp4" path="res://scenes/enemies/ice_cream_enemy/ice_cream_spoon.tscn" id="4_5jn82"]
[ext_resource type="AudioStream" uid="uid://cb04enywbw65w" path="res://music/monster-death-grunt.mp3" id="4_7s7ve"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p5yx3"]
atlas = ExtResource("1_jamjk")
region = Rect2(45, 0, 210, 237)

[sub_resource type="AtlasTexture" id="AtlasTexture_guws1"]
atlas = ExtResource("1_jamjk")
region = Rect2(332, 0, 210, 237)

[sub_resource type="AtlasTexture" id="AtlasTexture_e00s5"]
atlas = ExtResource("1_jamjk")
region = Rect2(619, 0, 210, 237)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfk6r"]
atlas = ExtResource("1_jamjk")
region = Rect2(906, 0, 210, 237)

[sub_resource type="SpriteFrames" id="SpriteFrames_s2d5s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5yx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guws1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e00s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfk6r")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5nd7"]
shader = ExtResource("2_3xoyq")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llejq"]
size = Vector2(82, 202)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_148u3"]
radius = 76.0
height = 168.0

[sub_resource type="Animation" id="Animation_1h6p8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationSprite:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_06r6x"]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationSprite:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0385i"]
_data = {
"RESET": SubResource("Animation_1h6p8"),
"flash": SubResource("Animation_06r6x")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pte10"]
radius = 66.0
height = 152.0

[node name="IceCreamEnemy" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
floor_max_angle = 0.872665
floor_snap_length = 20.0
script = ExtResource("1_olwro")

[node name="IceCreamSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s2d5s")
frame = 2
frame_progress = 0.633412

[node name="AnimationSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_x5nd7")
sprite_frames = SubResource("SpriteFrames_s2d5s")
frame = 2
frame_progress = 0.633412

[node name="EnemyArea" type="CollisionShape2D" parent="." groups=["Enemies"]]
position = Vector2(1, 15)
shape = SubResource("RectangleShape2D_llejq")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_148u3")
debug_color = Color(0.714092, 0.483097, 0.0397373, 0.42)

[node name="RayCast2D_Wall" type="RayCast2D" parent="."]
target_position = Vector2(70, 0)

[node name="RayCast2D_Fall" type="RayCast2D" parent="."]
position = Vector2(42, 2)
target_position = Vector2(0, 294)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0385i")
}

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7s7ve")

[node name="IceCreamSpoon" parent="." instance=ExtResource("4_5jn82")]
position = Vector2(92, 32)

[node name="HeadHitBox" type="Area2D" parent="." groups=["EnemyHeadsArea"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadHitBox"]
position = Vector2(0, -42)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pte10")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="HeadHitBox" to="." method="_on_head_hit_box_area_entered"]
